--- a/style.css
+++ b/style.css
@@ -1,16 +1,33 @@
+html {
+  
+}
+
 body {
+  display: flex;
   margin: 0;
   padding: 0;
-  background-color: #87919b;
+  background-color: white;
+  /*
   background-image: url('etch.JPG');
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; 
+  */
 }
 
 div.mainWrapper {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  padding: 0 12%;
+  padding: 0% auto 0 auto;
+  margin: 5% 0;
+}
+
+div.container {
+  display: flex;
+  flex: none;
+  padding: 0;
+  margin: 0;
 }
 
 .block {
