--- a/style.css
+++ b/style.css
@@ -25,36 +25,16 @@ div.mainWrapper {
 }
 
 div.container {
-  display: flex;
-  flex: 1 auto;
-  flex-direction: column;
-  overflow: hidden;
-  max-width: 800px;
-  height: 100%;
+  display: grid;
+  width: 500px;
+  height: 500px;
   padding: 0;
   margin: auto;
   border: 1px solid black;
 }
 
-div.row {
-  display: flex;
-  flex-wrap: wrap;
-  flex-grow: 1;
-  height: 25%;
-}
-
-div.breaker {
-  flex-basis: 100%;
-  height: 0;
-  margin: 0;
-  padding: 0;
-}
-
 .block {
-  flex: 1;
+  user-select: none;
   margin: 0;
   padding: 0;
-  width: 25%;
-  height: 100px;
-  border: 1px solid black;
 }
