--- a/style.css
+++ b/style.css
@@ -2,11 +2,18 @@ html {
   box-sizing: border-box;
 }
 
+/*
+
+#2f365f is a darkish blue
+#febeb0 is a pale salmon
+
+*/
+
 body {
   display: flex;
   margin: 0;
   padding: 0;
-  background-color: white;
+  background-color: #f7f1ed;
   /*
   background-image: url('etch.JPG');
   background-size: cover;
@@ -37,4 +44,18 @@ div.container {
   user-select: none;
   margin: 0;
   padding: 0;
+}
+
+input#picker {
+  margin: 0;
+  padding: 0;
+  width: 100px;
+  height: 100px;
+  border: none;
+  transition: transform 0.1s ease-in-out;
+}
+
+input#picker:hover {
+  transform: scale(1.07);
+  box-shadow: 0 0 5px 0 #000000;
 }
