--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 /*
@@ -10,35 +11,66 @@ html {
 */
 
 body {
-  display: flex;
   margin: 0;
   padding: 0;
-  background-color: #f7f1ed;
+  background-color: #333;
   /*
   background-image: url('etch.JPG');
   background-size: cover;
   background-repeat: no-repeat; 
   */
 }
-
+/*
 div.mainWrapper {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-flow: column wrap;
   width: 100%;
   height: 100%;
-  padding: 30px;
+  margin: 0;
+  padding: 0;
+}
+*/
+#header {
+  padding: 30px 0;
+}
+
+#header h1 {
+  text-align: center;
+  font-size: 60px;
+  padding: 0;
   margin: 0;
 }
 
-div.container {
+#mainContent {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin: 0 auto;
+  max-width: 1000px;
+}
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+  width: 200px;
+  gap: 2em;
+}
+
+.container {
   display: grid;
+  flex: none;
   width: 500px;
   height: 500px;
   padding: 0;
-  margin: auto;
+  margin: 30px;
   border: 1px solid black;
   box-shadow: 0 0 6px 3px #000000;
+  background-color: #f7f1ed;
 }
 
 .block {
@@ -47,7 +79,27 @@ div.container {
   padding: 0;
 }
 
-input#picker {
+button, input {
+  font-family: 'Roboto', sans-serif;
+  font-size: 24px;
+  font-weight: 900;
+}
+
+button {
+  width: 100%;
+  height: 50px;
+  border: 1px solid #f7f1ed;
+  border-radius: 7px;
+  background-color: inherit;
+  color: #f7f1ed;
+  transition: transform 0.1s ease-in-out;
+}
+
+button.active {
+  transform: scale(1.07);
+}
+
+#picker {
   margin: 0;
   padding: 0;
   width: 100px;
@@ -56,43 +108,33 @@ input#picker {
   transition: transform 0.1s ease-in-out;
 }
 
-input#picker.active {
-  transform: scale(1.07);
-}
-
-button#etchReset {
-  width: 100px;
-  height: 30px;
-  border: none;
-  border-radius: 7px;
-  background-color: #2f365f;
-  color: #f7f1ed;
-  transition: transform 0.1s ease-in-out;
-}
-
-button#etchReset.active {
+#picker.active {
   transform: scale(1.07);
 }
 
 /* MEDIA OBJECTS */
 
 @media (max-width: 900px) {
-  div.container {
+
+  .container {
     width: 400px;
     height: 400px;
   }
+
 }
 
 @media (max-width: 650px) {
-  div.container {
+
+  #mainContent {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .container {
     width: 300px;
     height: 300px;
+    margin-top: 0;
   }
-}
 
-@media (max-width: 400px) {
-  div.container {
-    width: 250px;
-    height: 250px;
-  }
 }
