--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ button:hover {
 /* CONTAINER RESET SHAKE ANIMATION */
 
 .shake {
-  animation: shake 1s cubic-bezier(.36, .07, .19, .97) both;
+  animation: shake 1s linear;
   transform: translate3d(0, 0, 0);
 }
 
@@ -204,24 +204,28 @@ input:checked + .slider:before {
 
 @keyframes shake {
 
+  0%, 100% {
+    transform: translateX(2px)
+  }
+
   10%, 90% {
-    transform: translate3d(-4px, 0, 0);
+    transform: translateX(-4px);
   }
 
   20%, 80% {
-    transform: translate3d(8px, 0, 0);
+    transform: translateX(8px);
   }
 
   30%, 70% {
-    transform: translate3d(-16px, 0, 0);
+    transform: translateX(-8px);
   }
 
   40%, 60% {
-    transform: translate3d(16px, 0, 0);
+    transform: translateX(8px);
   }
 
   50% {
-    transform: translate3d(8px, 0, 0);
+    transform: translateX(2px);
   }
 
 }
