--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
 
 .sidebar {
   display: flex;
+  flex: none;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -59,6 +60,10 @@ body {
   user-select: none;
   margin: 0;
   padding: 0;
+}
+
+.disappear {
+  animation: disappear 1s linear;
 }
 
 .active {
@@ -117,7 +122,7 @@ button:hover {
   font-size: 40px;
   text-align: center;
   letter-spacing: 10px;
-  line-height: 0.85em;
+  line-height: 0.9em;
   background: linear-gradient(
     #fd004c 16.7%,
     #fe9000 16.7%,
@@ -229,6 +234,50 @@ input:checked + .slider:before {
 
   50% {
     transform: translateX(2px);
+  }
+
+}
+
+@keyframes disappear {
+  
+  10% {
+    opacity: 90%;
+  }
+
+  20% {
+    opacity: 80%;
+  }
+
+  30% {
+    opacity: 70%;
+  }
+
+  40% {
+    opacity: 60%;
+  }
+
+  50% {
+    opacity: 50%;
+  }
+
+  60% {
+    opacity: 40%;
+  }
+
+  70% {
+    opacity: 30%;
+  }
+
+  80% {
+    opacity: 20%;
+  }
+
+  90% {
+    opacity: 10%;
+  }
+
+  100% {
+    opacity: 0%;
   }
 
 }
