--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 html {
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
+  color: var(--dark);
 }
 
 body {
@@ -51,8 +52,7 @@ body {
   height: 500px;
   padding: 0;
   margin: 30px;
-  border: 1px solid black;
-  box-shadow: 0 0 10px 0 var(--dark);
+  box-shadow: 0 0 15px 0 var(--dark);
   background-color: #f5f5f5;
 }
 
@@ -284,9 +284,14 @@ input:checked + .slider:before {
 
 @media (max-width: 900px) {
 
-  .container {
+  #container {
     width: 400px;
     height: 400px;
+    margin: 15px;
+  }
+
+  #sidebar {
+    padding: 15px;
   }
 
 }
@@ -294,16 +299,16 @@ input:checked + .slider:before {
 @media (max-width: 650px) {
 
   #mainContent {
-    flex-direction: column;
+    flex-flow: column-reverse;
     justify-content: flex-start;
     align-items: center;
   }
 
-  .sidebar {
+  #sidebar {
     padding-top: 0px;
   }
 
-  .container {
+  #container {
     width: 300px;
     height: 300px;
     margin-top: 0;
